# omiga

./: .coverage  .env.example  .gitignore  CLAUDE.md  FEATURE_STATUS.md  LICENSE  README.md  README.zh-CN.md  TODOS.md  config.example.yaml  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: .env.example  .mcp.json  Cargo.toml  Entitlements.plist  Info.plist  bundled_mcp.json  tauri.conf.json
src-tauri/.omiga/memory/: cache.json  tree.json
src-tauri/browser-operator/: README.md  browser_operator.py  install_backend.py
src-tauri/bundled_plugins/: marketplace.json
src-tauri/bundled_plugins/plugins/operator-differential-expression-r/: plugin.json
src-tauri/bundled_plugins/plugins/operator-enrichment-r/: plugin.json
src-tauri/bundled_plugins/plugins/operator-geo-search/: plugin.json
src-tauri/bundled_plugins/plugins/operator-pca-r/: plugin.json
src-tauri/bundled_plugins/plugins/operator-pubmed-search/: plugin.json
src-tauri/bundled_plugins/plugins/operator-smoke/: plugin.json
src-tauri/bundled_plugins/plugins/resource-embl-ebi/: plugin.json
src-tauri/bundled_plugins/plugins/retrieval-dataset-arrayexpress/: plugin.json
src-tauri/bundled_plugins/plugins/retrieval-dataset-biosample/: plugin.json
src-tauri/bundled_plugins/plugins/retrieval-dataset-ena/: plugin.json
src-tauri/bundled_plugins/plugins/retrieval-dataset-geo/: plugin.json
src-tauri/crates/omiga-landlock/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/omiga-plugins/: marketplace.json
src-tauri/skills/agents/: architect.md  code-reviewer.md  debugger.md  security-reviewer.md  verification.md
src-tauri/src/: app_state.rs  errors.rs  errors_tests.rs  lib.rs  main.rs
src-tauri/src/api/: mod.rs  sse.rs
src-tauri/src/bridge/: auth.rs  mod.rs  protocol.rs  server.rs  state.rs
src-tauri/src/commands/: app_skin.rs  blackboard.rs  bridge.rs  browser_operator.rs  chat.rs  citation.rs  claude_import.rs  computer_use.rs  connectors.rs  context_snapshot.rs  cron.rs  execution_envs.rs  execution_records.rs  extensions.rs  external_integrations.rs  fs.rs  git_workspace.rs  integrations_settings.rs  learning_proposals.rs  local_envs.rs  memory.rs  mod.rs  notebook.rs  operators.rs  permissions.rs  playbooks.rs  plugins.rs  ralph.rs  sandbox_fs.rs  search.rs  self_evolution_drafts.rs  session.rs  shell.rs  ssh_fs.rs  terminal.rs  tools.rs  wiki.rs
src-tauri/src/constants/: agent_prompt.rs  mod.rs  plan_mode_prompt.rs  tool_limits.rs
src-tauri/src/domain/: app_data_migration.rs  audit.rs  auto_compact.rs  autopilot_state.rs  background_shell.rs  blackboard.rs  chat_session_title.rs  chat_state.rs  connectors.rs  context_snapshot.rs  coordinator.rs  cron_scheduler.rs  env_hygiene.rs  environment_availability.rs  environment_fallback.rs  environment_prewarm.rs  environments.rs  execution_records.rs  integrations_catalog.rs  integrations_config.rs  learning_proposals.rs  mcp_client.rs  mcp_config.rs  mcp_connection_manager.rs  mcp_discovery.rs  mcp_names.rs  mcp_tool_dispatch.rs  mcp_tool_pool.rs  mod.rs  mode_resume.rs  persistence_tests.rs  plugins.rs  post_turn_settings.rs  ralph_state.rs  retrieval_registry.rs  runtime_constraints.rs  session_codec.rs  session_codec_tests.rs  subagent_tool_filter.rs  suggestions.rs  (+4 more)
src-tauri/src/execution/: base.rs  daytona.rs  docker.rs  local.rs  mod.rs  modal.rs  singularity.rs  ssh.rs  ssh_sync_manifest.rs  types.rs
src-tauri/src/infrastructure/: mod.rs  otel.rs  streaming.rs  streaming_tests.rs
src-tauri/src/llm/: anthropic.rs  config.rs  domestic.rs  mod.rs  openai.rs  types.rs
src-tauri/src/utils/: large_output_instructions.rs  mod.rs  shell.rs
src-tauri/tests/: README.md  domain_agents.rs  domain_permissions_tool_rules.rs  domain_persistence.rs  domain_session_codec.rs  domain_tools.rs  fs_mutation_commands.rs  mock_llm_runtime_harness.rs  real_autopilot_harness.rs  real_runtime_smoke.rs  real_schedule_harness.rs  real_team_harness.rs  research_cli.rs  research_context_permissions.rs  research_executor.rs  research_planner.rs  research_registry.rs  research_reviewer_creator.rs  smoke.rs
src-tauri/tests/domain_tools/: fetch.rs  file_edit.rs  grep.rs  notebook_edit.rs  query.rs  search.rs  todo_write.rs  web_fetch.rs  web_search.rs  worktree_execution_root.rs
(+1089 files in other folders)
