[package]
name = "omiga"
version = "0.1.0"
description = "An IDE-like AI coding assistant built with Tauri"
authors = ["omiga contributors"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "omiga_lib"
crate-type = ["staticlib", "cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "omiga"
path = "src/main.rs"

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client + SSE
reqwest = { version = "0.13", features = ["json", "stream", "rustls", "query"] }
eventsource-stream = "0.2"
futures = "0.3"
async-recursion = "1.1"

# Persistence (SQLite)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# File watching
notify = "8"

# Git operations
git2 = "0.19"

# Search (ripgrep library)
ripgrep-api = "0.1"
ignore = "0.4"

# Process management
sysinfo = "0.30"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
html2text = "0.14"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
glob = "0.3"
globset = "0.4"
nix = { version = "0.29", features = ["process", "signal"] }
tokio-stream = "0.1"

# LLM API dependencies
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"  # For HMAC signing
dirs = "5"
rand = "0.8"
lazy_static = "1.4"
serde_yaml = "0.9"
pulldown-cmark = "0.9"
shell-words = "1.1"
toml = "0.8"
tauri-plugin-dialog = "2.0.0-rc.8"
rmcp = { version = "1.3", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
# Note: Tests use in-memory SQLite, no external containers needed

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
